--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@ body {
     font-family: "Helvetica Neue",Helvetica,Arial,"Hiragino Sans GB", "STHeiti", "Microsoft YaHei",
              "WenQuanYi Micro Hei", sans-serif;
     font-size: 1.6em;
+    -ms-overflow-style: scrollbar;
 }
 
 .dropdown-menu {width:100%}
@@ -18,13 +19,14 @@ body {
     z-index: 100
 }
 .container-fluid {
-    width: 1088px; 
+    width: 1088px;
+    height: 90px;
     padding-left: 220px;
+    padding-right: 0px;
     background: transparent url('../images/logo.png') no-repeat 25px 16px;
     position: relative;
 }
 .navbar {
-    height: 90px;
     background-color: rgba(12,95,161,0.9)
 }
 .navbar .navbar-nav:first-child {
@@ -35,7 +37,7 @@ body {
 .navbar .navbar-nav:first-child li:last-child {
     margin-left:20px
 }
-#navigator li { height:71px}
+.container-fluid > ul:first-child > li { height:71px}
 .navbar-nav li { margin-right:1.2em}
 .navbar-default .navbar-nav>li>a { color:white}
 .navbar-signin { margin-left:2em; font-size:0.95em}
@@ -48,18 +50,7 @@ body {
     margin-top: 5px;
 }
 .navbar-signin div > span:first-child { color:#8ec1e9}
-.navbar-right { 
-    width:88px;
-    height: 88px;
-    background-color: rgba(9,80,136,0.44)
-}
-.navbar-right  li {
-    position: absolute;
-    top: 17px;
-    right: 33px;
-    margin-right:0;
-}
-.navbar-right img {width:24px; height:25px}
+
 #zhaopinDiv {
     position: absolute;
     border-top: 3px solid #fc4100;
@@ -72,6 +63,9 @@ body {
     z-index: 1;
     font-size:0.95em;
     display: none
+}
+#zhaopinDiv a {
+    color:white
 }
 #redTrian {
     position: absolute;
@@ -127,7 +121,6 @@ body {
     margin-right: 50px;
     padding-bottom: 20px;
 }
-.white a { color:white}
 .arrow-right {
     display: inline-block;
 	width: 0; 
@@ -463,7 +456,7 @@ body {
 #contact-middleDiv {
     height: 862px;
     width:958px;
-    margin: auto;
+    margin: 100px auto 0;
     background: white url("../images/contactbg.jpg") no-repeat;
     position: relative
 }
@@ -496,11 +489,11 @@ body {
     top: 475px;
     left: 700px
 }
-.vspan100 { height: 100px;}
 #recruitTb {
     line-height: 2em;
     width:1088px;
     margin: auto;
+    margin-top: 90px;
 }
 #recruitTb > tbody>tr:first-child > td:last-child {
     font-size:0.95em
@@ -556,7 +549,10 @@ body {
 #recruitTb p {
     font-size: 0.95em
 }
-#secondnav {
+#recruitBd .navbar { 
+    position: relative;
+}
+#recruitBd #secondnav {
     position: fixed;
     display:none;
     height: 55px;
@@ -564,17 +560,17 @@ body {
     width:100%;
     background-color: rgba(12,95,161, 0.9)
 }
-#secondnav .container-fluid {
+#recruitBd #secondnav .container-fluid {
     width: 1088px; 
     height: 55px;
     padding-left: 70px;
     background: transparent url('../images/icon.png') no-repeat 25px 15px;
     position: relative;
 }
-#secondnav .navbar-nav:first-child li:last-child {
+#recruitBd #secondnav .navbar-nav:first-child li:last-child {
     margin-left: 0
 }
-#secondnav .navbar-nav li {
+#recruitBd #secondnav .navbar-nav li {
     margin-right: 0.2em;
 }
 #toTop {
@@ -622,4 +618,34 @@ body {
     text-decoration: inherit;
     display: inline-block;
     speak: none;
+}
+#navigator .navbar-form {
+    margin:0;
+    position: relative;
+    padding: 0 50px 0 18px;
+}
+#navigator .navbar-form > .form-group{
+    width: 0;
+    overflow: hidden;
+    margin-right: 10px;
+}
+#navigator .navbar-form input.form-control {
+    width: 270px;
+    border-radius: 0;
+    border: none;
+    color: #0a5997;
+}
+.navbar-right {
+    height: 90px;
+    line-height: 90px;
+    background-color: rgba(9,80,136,0.44);
+}
+.navbar-right > input {
+    position: absolute;
+    top: 50%;
+    right: 28px;
+    margin-top: -12px;
+}
+.navbar-right > input:focus {
+    outline: none;
 }
